# SoundnessXAI

./: README.md  gradcam_lw_opt.py  gradcam_search.py  pyproject.toml  scoring.py  validate.py
data/models/fast_charge/: targets.pk
data/models/fast_charge/results/: acumen.pk  cs.pk  gradcam1_1.pk  gradcam1_1.pk.bck  gradcam_aux.pk  identity.pk  selectivity.pk  separability.pk  stability.pk
data/models/fast_charge/results/ray/: experiment_state-2023-03-29_01-32-58.json  search_gen_state-2023-03-29_01-32-58.json  searcher-state-2023-03-29_01-32-58.pkl
data/models/fast_charge/results/ray/train_0a23b9ae_19_block_size=3.3127,conv_activation=0.13188,dense_activation=-0.23661,dilation_rate=4.504,dropout=0.41042,epochs=1_2023-03-29_13-29-59/: params.json  params.pkl  progress.csv  result.json
data/models/ncmapss/: gradcam10.pk.bck
data/models/ncmapss/results/: acumen.pk  gradcam.pk  gradcam1_1.pk  sample.pk  selectivity.pk  selectivity10.pk  targets.pk
data/models/pronostia/: samples.pk  targets.pk
data/models/pronostia/results/: acumen.pk  cs.pk  gradcam1_1.pk  identity.pk  selectivity.pk  separability.pk  stability.pk
methods/: __init__.py  ae.py  gradcam.py  lime.py  lrp.py  meta.py  saliency.py  shap.py  utils.py
model/: PRONOSTIA.ipynb  Results reading.ipynb  Show Ray results.ipynb  fast_charge_opt.py  models.py  scoring.py  utils.py
model/.ipynb_checkpoints/: FASTCHARGE-checkpoint.ipynb
results/: cs.pk  identity.pk  separability.pk  stability.pk
(+114 files in other folders)
