[tool.poetry]
name = "xai-validation"
version = "0.1.0"
description = "Validation of XAI methos throw a few proxies"
authors = ["David Solís Martín"]
readme = "README.md"
packages = [{include = "xai_validation"}]

[tool.poetry.dependencies]
python = "3.7.4"
ruptures = "1.1.7"
tensorflow = "2.2.0"
keras = "2.2.4"
opencv-python = "^4.7.0.68"
protobuf = ">=3.20.0,<3.21.0"
matplotlib = "3.5.1"
seaborn = "0.11.1"
scikit-learn = "1.0.2"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
